# algo-lessons

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
lessons/: __init__.py  linked_list.py
tests/: test_linked_list.py  test_linked_list_delete.py
